--- a/webpack-03-clean/package.json
+++ b/webpack-03-clean/package.json
@@ -15,5 +15,8 @@
     "lodash": "^4.17.21",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.6.0"
   }
 }
